--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-lxml==4.6.2
+lxml==4.9.2
 Pympler==0.9
 wikimapper==0.1.5
 nltk==3.5
 dateparser==1.0.0
 pandas==1.1.5
-spacy_nightly==3.0.0rc2
+spacy_nightly==3.0.0rc5
 tqdm==4.49.0
 SPARQLWrapper==1.8.5
-jsonlines==2.0.
+jsonlines==2.0.0
 
 transformers
 sentencepiece
